with registration form

--- a/public/static/howto.html
+++ b/public/static/howto.html
@@ -20,6 +20,7 @@
 						<li style='pointer-events: none;'><a href="howto.html" class="active">How To Play</a></li>
 						<li class=""><a href="about.html">About</a></li>
 						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
+						<li><a href="register">Register</a></li>
 					</ul>
 				</div>
 			</div>
