--- a/public/static/about.html
+++ b/public/static/about.html
@@ -20,6 +20,7 @@
 						<li><a href="howto.html">How To Play</a></li>
 						<li style='pointer-events: none;' class=""><a href="about.html" class="active">About</a></li>
 						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
+						<li><a href="register">Register</a></li>
 					</ul>
 				</div>
 			</div>
