--- a/public/static/references.html
+++ b/public/static/references.html
@@ -20,6 +20,7 @@
 						<li><a href="howto.html">How To Play</a></li>
 						<li class=""><a href="about.html">About</a></li>
 						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
+						<li><a href="register">Register</a></li>
 					</ul>
 				</div>
 			</div>
