--- a/public/static/about.html
+++ b/public/static/about.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 		</header>
-
+		<h3 id="testlog"><a href="login">login</a></h3>
 		<div class="content">
 			<h2>UWA 2016</h2>
 			<p>CITS3403 Project 1</p>
