--- a/public/static/references.html
+++ b/public/static/references.html
@@ -25,6 +25,7 @@
 				</div>
 			</div>
 		</header>
+		<h3 id="testlog"><a href="login">login</a></h3>
 
 		<div class="content" id="wider_table">
 			<h1>References used:</h1>
