--- a/public/static/game.html
+++ b/public/static/game.html
@@ -25,6 +25,7 @@
 				</div>
 			</div>
 		</header>
+		<h3 id="testlog"><a href="login">login</a></h3>
 		<div class="main-content">
 			<div class="names">
 				<p id="move_names"></p>
