updated nav bar, redirecting, comments update

--- a/public/static/about.html
+++ b/public/static/about.html
@@ -9,8 +9,8 @@
 	<script type="text/javascript" src="../javascripts/myScript.js"></script>
 </head>
 <body onload="footer_info();">
-	<div class="page-wrap">
-		<header class="header">
+	<div class="page-wrap" id="mypagewrap">
+		<header id="myheader" class="header">
 			<div class="header_inner">
 				<div class="navigation">
 					<ul class="navigation_inner">
@@ -19,13 +19,13 @@
 						<li><a href="references.html">References used</a></li>
 						<li><a href="howto.html">How To Play</a></li>
 						<li style='pointer-events: none;' class=""><a href="about.html" class="active">About</a></li>
-						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
 						<li><a href="register">Register</a></li>
+						<li id="testlog"><a href="login">Login</a></li>
+						<li><a href="comments">Feedbacks</a></li>
 					</ul>
 				</div>
 			</div>
 		</header>
-		<h3 id="testlog"><a href="login">login</a></h3>
 		<div class="content">
 			<h2>UWA 2016</h2>
 			<p>CITS3403 Project 1</p>
