--- a/public/static/references.html
+++ b/public/static/references.html
@@ -19,13 +19,13 @@
 						<li style='pointer-events: none;'><a href="references.html" class="active">References used</a></li>
 						<li><a href="howto.html">How To Play</a></li>
 						<li class=""><a href="about.html">About</a></li>
-						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
 						<li><a href="register">Register</a></li>
+						<li id="testlog"><a href="login">Login</a></li>
+						<li><a href="comments">Feedbacks</a></li>
 					</ul>
 				</div>
 			</div>
 		</header>
-		<h3 id="testlog"><a href="login">login</a></h3>
 
 		<div class="content" id="wider_table">
 			<h1>References used:</h1>
