--- a/public/static/howto.html
+++ b/public/static/howto.html
@@ -19,15 +19,15 @@
 						<li><a href="references.html">References used</a></li>
 						<li style='pointer-events: none;'><a href="howto.html" class="active">How To Play</a></li>
 						<li class=""><a href="about.html">About</a></li>
-						<li><a href="dynamic_test">DYNAMIC TEST</a></li>
 						<li><a href="register">Register</a></li>
+						<li id="testlog"><a href="login">Login</a></li>
+						<li><a href="comments">Feedbacks</a></li>
 					</ul>
 				</div>
 			</div>
 		</header>
 
 		<div class="content">
-		<h3 id="testlog"><a href="login">login</a></h3>
 			<h2>Rules are simple</h2>
 			<p>The Connect 4 Board Game Rules are easy to understand. In fact, it is in the name. To win Connect Four, all you have to do is connect four of your colored checker pieces in a row, much the same as tic tac toe. This can be done horizontally, vertically or diagonally. Each player will drop in one checker piece at a time. This will give you a chance to either build your row, or stop your opponent from getting four in a row.</p>
 			<p>The game is over either when you or your friend reaches four in a row, or when all forty two slots are filled, ending in a stalemate. If you and your friend decide to play again, the loser typically goes first. Cleaning up the game is very easy. The bottom of the vertical game board has a switch that you slide to make the pieces drop out of the board. This is a great opportunity to put the box underneath the game board to collect all of checker pieces together.</p>
